--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-server.port = 9999
+server.port = 9988
 logging.level.org.springframework.cloud.gateway = debug
 server.compression.enabled=true
 server.compression.min-response-size=30
+spring.application.name=gateway
+eureka.client.service-url.defaultZone=http://localhost:7002/eureka/
+ribbon.eureka.enabled=true
+spring.cloud.gateway.discovery.locator.enabled=true
