--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.application.name=gateway
 eureka.client.service-url.defaultZone=http://localhost:7002/eureka/
 ribbon.eureka.enabled=true
 spring.cloud.gateway.discovery.locator.enabled=true
+management.endpoints.web.exposure.include=gateway
